# ComfyUI-FaceFilter

./: README.md  __init__.py  face_filter_node.py  install.py  merge_batches_node.py  nodes.py  pyproject.toml
.github/workflows/: publish.yml
examples/: FaceFilter-Faceswap-Video.json  FaceFilter-Faceswap.json  FaceFilter-simple.json
